# playlist

./: .pre-commit-config.yaml  .pylintrc  README.md  constants.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: .pylintrc  pylint.yml  python-app.yml
core/: bot.py  database.py  generator.py  handlers.py  main.py
model/: Config.py  Platform.py  Track.py  User.py
playlist/: constants.py
playlist/core/: bot.py  database.py  generator.py  handlers.py
playlist/html/: README.md  index.html  privacyPolicy.html
playlist/model/: Config.py  Platform.py  Track.py  User.py
tests/: .cache  test_PlaylistGenerator.py  test_model.py  test_tmp.py
ytmusicapi/: ytmusic.py
ytmusicapi/mixins/: library.py
ytmusicapi/model/: Config.py  Track.py
ytmusicapi/parsers/: browsing.py
